<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.vpfragments.AddAdTransporterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_transporter_auto_type_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/rg_transporters"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/ad_transport_type"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/rg_transporters"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tv_transporter_auto_type_choice"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_switcher_outline"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/transporter_car"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:textColor="@color/black"
                    android:text="@string/rg_car"
                    android:fontFamily="@font/roboto"
                    android:checked="true"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/switch_item_background"
                    android:button="@null"/>

                <RadioButton
                    android:id="@+id/transporter_truck"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:textColor="@color/black"
                    android:text="@string/rg_truck"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/switch_item_background"
                    android:button="@null"/>
            </RadioGroup>


            <FrameLayout
                android:id="@+id/transporters_ad_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rg_transporters"
                android:layout_alignParentEnd="true">
            </FrameLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>